--- a/app/views/home/_view_trends.html.erb
+++ b/app/views/home/_view_trends.html.erb
@@ -66,7 +66,7 @@
             </tr>
 
             <% else %>
-            <tr><th><a href="#addTrialModal" role="button" class="btn btn-success" data-toggle="modal">Set Goal</a></th><td></td></tr>
+            <tr><th><a href="goalModal" role="button" class="btn btn-success" data-toggle="modal">Set Goal</a></th><td></td></tr>
             <% end %>
 
             <tr><th style = "font-size:14px">Avg/Month</th><td style = "font-size:14px; text-align: right;">62.5</td></tr>
@@ -98,3 +98,6 @@
     </div> <!-- end tab content -->
 
 </div>
+
+
+
