--- a/app/views/home/_edit_data.html.erb
+++ b/app/views/home/_edit_data.html.erb
@@ -1,10 +1,10 @@
-  <!--*************************** begin Edit Data ******************** -->  
+<!--*************************** begin Edit Data ******************** -->  
 
 <div class="tab-pane fade" id="edit">
 
 <div class="row-fluid">
-<div class= "span8">
-        <h4>Add Data</h4> 
+<div class= "span12">
+        <legend>Add Data</legend>
       </div>
     </div>
 
@@ -12,38 +12,39 @@
 
 
   <fieldset>
-<div class="input-append">
-  <%= f.text_field :enrolled,  :class => "span2", :type => 'number',
+<div class="input-prepend">
+  <span class="add-on">Enrolled </span>
+  <%= f.text_field :enrolled,  :class => "span2", :type => 'text',
               :value => @last_entry.enrolled %>
-  <span class="add-on">Enrolled</span>
+  
 </div>
 
-<div class="input-append">
-  <%= f.text_field :active, :class => "span2" , :type => 'number',
+<div class="input-prepend">
+    <span class="add-on">Active    </span>
+  <%= f.text_field :active, :class => "span2" , :type => 'text',
               :value => @last_entry.active %>
-  <span class="add-on">Active</span>
 </div>
-<div class="input-append">
-  <%= f.text_field :completed, :class => "span2" , :type => 'number',
+<div class="input-prepend">
+    <span class="add-on">Completed</span>
+  <%= f.text_field :completed, :class => "span2" , :type => 'text',
               :value => @last_entry.completed %>
-  <span class="add-on">Completed</span>
 </div>
-<div class="input-append">
-  <%= f.text_field :withdrawn, :class => "span2" , :type => 'number',
+<div class="input-prepend">
+    <span class="add-on">Withdrawn</span>
+  <%= f.text_field :withdrawn, :class => "span2" , :type => 'text',
               :value => @last_entry.withdrawn %>
-  <span class="add-on">Withdrawn</span>
 </div>
-<div class="input-append">
-  <%= f.text_field :refused, :class => "span2" , :type => 'number',
+<div class="input-prepend">
+    <span class="add-on">Refused  </span>
+  <%= f.text_field :refused, :class => "span2" , :type => 'text',
               :value => @last_entry.refused %>
-  <span class="add-on">Refused</span>
 </div>
-<div class="input-append">
-  <%= f.text_field :lost, :class => "span2" , :type => 'number',
+<div class="input-prepend">
+    <span class="add-on">Lost     </span>
+  <%= f.text_field :lost, :class => "span2" , :type => 'text',
               :value => @last_entry.lost %>
-  <span class="add-on">Lost</span>
 </div>
-<%= f.submit "Create" %>
+<%= f.submit "Create", :class=>"btn btn-success"%>
 <% end %>
 <br />
 
@@ -74,8 +75,8 @@
 
 -->
 <div class="row-fluid">
-<div class= "span8">
-        <h4>My Data</h4> 
+<div class= "span12">
+       <legend>My Data</legend>
       </div>
     </div>
 
