--- a/app/views/home/_settings.html.erb
+++ b/app/views/home/_settings.html.erb
@@ -2,7 +2,9 @@
  <div class="tab-pane fade" id="settings">
 
   <div class = "row-fluid">
-		<div class="span12">
+
+      <fieldset>
+    <legend>Goals</legend>
 
  <form class="form-horizontal">
   <div class="control-group">
@@ -27,11 +29,51 @@
       
     </div>
   </div>
-  
 
+  <div class="control-group">
+    <div class="controls">
+  <button type="submit" class="btn btn-success">Update</button>
+  <small>Last updated on 12-24-2012</small>
+</div>
+</div>
+</fieldset>
 </form>
 
-		</div> <!-- end span12 -->
+	
 	</div>
+
+  <div class = "row-fluid">
+    <div class="span12">
+
+
+    <fieldset>
+       <legend>Trial</legend>
+
+ <form class="form-horizontal">
+  <div class="control-group">
+    <label class="control-label" for="inputEmail">Trial ID</label>
+    <div class="controls">
+      <input type="text" id="inputEmail" value='<%= @first_trial.enrolledGoal %>' style="height:30px">
+    </div>
+  </div>
+
+  <div class="control-group">
+    <label class="control-label" for="inputPassword">Trial Name</label>
+    <div class="controls">
+      <input type="text" id="inputPassword" value='<%= @first_trial.completedGoal %>' style="height:30px">
+    </div>
+  </div>
+
+<div class="control-group">
+    <div class="controls">
+  <button type="submit" class="btn btn-success">Update</button>
+  <small>Last updated on 12-24-2012</small>
+</div>
+</div>
+</fieldset>
+</form>
+
+    </div> <!-- end span12 -->
+  </div>
 
 </div><!-- end settings -->
