--- a/app/views/home/_modal.html.erb
+++ b/app/views/home/_modal.html.erb
@@ -24,7 +24,7 @@
     <form>
         <fieldset>
 
-            <input class="span8" type="text" placeholder="Trial Name">
+            <!-- <input class="span8" type="text" placeholder="Trial Name"> -->
 
             <div class="input-append">
                 <input class="span8" type="text" placeholder="Invite Someone" id="appendedInputButton" type="text">
@@ -54,7 +54,7 @@
 
         </fieldset>
     
-    <button type="submit" class="btn">Submit</button>
+   <!--  <button type="submit" class="btn">Submit</button> -->
 </form>
 
   </div>
@@ -79,18 +79,7 @@ function allTrials(query, process) {
 
 <!--**************** End Modal  ************************************-->
 
-  <div id="editTrialModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-    <h3 id="myModalLabel">Edit trial</h3>
-  </div>
-
-  <div class="modal-body" height="500px">
- 
- 
-  </div>
-</div>
-
+  
 
 
 
