--- a/app/views/home/_settings.html.erb
+++ b/app/views/home/_settings.html.erb
@@ -1,10 +1,34 @@
 	
  <div class="tab-pane fade" id="settings">
+  <h3 align = "center"> Edit your Trial Settings </h3>
+  <div> &nbsp </div>
 
   <div class = "row-fluid">
 		<div class="span12">
 
+
+
+
  <form class="form-horizontal">
+  <%= form_for(@first_trial) do |f| %>
+  <div class="control-group">
+    <label class="control-label" for="inputPassword">Trial Name</label>
+    <div class="controls">
+
+      <input type="text" value='<%= @first_trial.trialName %>' id="datepicker" data-date-format="mm-dd-yyyy" style="height:30px">
+      
+    </div>
+  </div>
+
+  <div class="control-group">
+    <label class="control-label" for="inputPassword">Trial ID</label>
+    <div class="controls">
+      <input type="text" value='<%= @first_trial.trialID %>' id="datepicker" data-date-format="mm-dd-yyyy" style="height:30px">
+      
+    </div>
+  </div>
+
+
   <div class="control-group">
     <label class="control-label" for="inputEmail">Enrolled Goal</label>
     <div class="controls">
@@ -15,6 +39,7 @@
   <div class="control-group">
     <label class="control-label" for="inputPassword">Completed Goal</label>
     <div class="controls">
+
       <input type="text" id="inputPassword" value='<%= @first_trial.completedGoal %>' style="height:30px">
     </div>
   </div>
@@ -27,6 +52,15 @@
       
     </div>
   </div>
+
+ <div class="actions">
+    <%= button_to "Update", @first_trial, :method=>:update %>
+    <%= button_to "Delete", @trial, :method=>:delete,  :class=>:destroy %>
+  </div>
+<% end %>
+
+
+
   
 
 </form>
